# Alphafold3-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yaml
af3builder/: build.py  cli.py  core.py  estimate_tokens.py  exceptions.py  fetchers.py  gpu_config.py  map_chains.py  validator.py
envs/: af3env.yaml  pytest_env.yaml
tests/: test_fetchers.py
