[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "af3builder"
version = "0.1.0"
authors = [{name = "Ronald Oellers", email = "oellers@ie-freiburg.mpg.de"}]
description = "AlphaFold3 input preparation toolkit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
keywords = [
    "AlphaFold3",
    "AlphaFold",
    "JSON",
    "NCBI",
    "Uniprot"
]

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.12"

dependencies = [
    "requests>=2.28",
    "biopython>=1.81",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "click>=8.0"
]

[project.optional-dependencies]
actions = [
    "pytest"
]

[tool.setuptools]
# Explicitly specify packages to include
packages = ["af3builder"]

[project.scripts]
af3build = "af3builder.build:build"
af3map-chains = "af3builder.map_chains:map_chains"
af3estimate-tokens = "af3builder.estimate_tokens:estimateTokens"
